--- a/index.html
+++ b/index.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="index.css" />
-  </head>
-  <body>
-    <form id="form">
-      <input id="category" type="text" placeholder="category" />
-      <input id="price" type="text" placeholder="price" />
-      <input id="releasedate" type="text" placeholder="releasedate" />
-      <input id="image" type="text" placeholder="image" />
-      <input id="vitesse" type="text" placeholder="vitessemax" />
-      <button id="add">add</button>
-    </form>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="main.css" />
+</head>
+<body>
+  <form id="form">
+    <input id="category" type="text" placeholder="category" />
+    <input id="price" type="text" placeholder="price" />
+    <input id="releasedate" type="text" placeholder="releasedate" />
+    <input id="image" type="text" placeholder="image" />
+    <input id="vitesse" type="text" placeholder="vitessemax" />
+    <button id="add">add</button>
+  </form>
 
-    <div class="topnav">
-      <p class="all" onclick="show()">Add car</p>
-    </div>
-    <h1 class="all">Showroom</h1>
+  <div class="topnav">
+    <p class="all" onclick="show()">Add car</p>  
+    <button class="all" type="button">Price cars (upper to down )</button>
+    <button class="all" type="button">Price cars (down to Upper )</button>
+    <input class="text" type="text" placeholder="found your dream car..." > <button class="all" type="submit" onclick="search">Search</button>
+    
+  </div>
+  <h1 class="all">Showroom</h1>
 
-    <div id="car"></div>
+  <div id="car"></div>
 
-    <script
-      src="https://code.jquery.com/jquery-3.7.1.js"
-      integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
-      crossorigin="anonymous"
-    ></script>
-    <script src="main.js"></script>
-  </body>
+  <script
+    src="https://code.jquery.com/jquery-3.7.1.js"
+    integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+    crossorigin="anonymous"
+  ></script>
+  <script src="main.js"></script>
+</body>
 </html>
