--- a/index.html
+++ b/index.html
@@ -7,25 +7,26 @@
   <link rel="stylesheet" href="main.css" />
 </head>
 <body>
+
+
+  <div class="topnav">
+    <p class="add" >Add car</p>  
+    <button class="all" type="button">Price cars (upper to down )</button>
+    <button class="low" type="button">Price cars (down to Upper )</button>
+    <input class="text" type="text" placeholder="found your dream car..." > <button class="btt"   >Search</button>
+    
+  </div>
   <form id="form">
     <input id="category" type="text" placeholder="category" />
     <input id="price" type="text" placeholder="price" />
     <input id="releasedate" type="text" placeholder="releasedate" />
     <input id="image" type="text" placeholder="image" />
     <input id="vitesse" type="text" placeholder="vitessemax" />
-    <button id="add">add</button>
+    <button id="addbutton">add</button>
   </form>
-
-  <div class="topnav">
-    <p class="all" onclick="show()">Add car</p>  
-    <button class="all" type="button">Price cars (upper to down )</button>
-    <button class="all" type="button">Price cars (down to Upper )</button>
-    <input class="text" type="text" placeholder="found your dream car..." > <button class="all" type="submit" onclick="search">Search</button>
-    
-  </div>
-  <h1 class="all">Showroom</h1>
-
-  <div id="car"></div>
+  <h1 class="">Showroom</h1>
+<div id="all"></div>
+  
 
   <script
     src="https://code.jquery.com/jquery-3.7.1.js"
