--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <div class="topnav">
       <p class="all" onclick="show()">Add car</p>
+      <input id="find" type="text" placeholder="find your dream car..." > <button id="search" onclick="sho()"   >Search</button>
     </div>
     <h1 class="all">Showroom</h1>
 
